chore: Add, initialise tailwindcss, @tailwindcss/ui

--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "next": "9.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/ui": "0.3.0",
+    "postcss-preset-env": "6.7.0",
+    "tailwindcss": "1.4.6"
   }
 }
