--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "2.2.6",
     "graphql-request": "1.8.2",
     "next": "9.4.1",
     "react": "16.13.1",
