chore: Update renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,8 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "automerge": true,
+  "extends": ["config:base", "schedule:weekly"],
+  "major": {
+    "automerge": false
+  },
+  "semanticCommits": true
 }
