--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql-request": "2.0.0",
     "markdown-to-jsx": "6.11.4",
     "next": "9.5.2",
+    "next-mdx-remote": "1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
