--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "0.2.0",
     "@tailwindcss/ui": "0.5.0",
     "postcss-preset-env": "6.7.0",
     "tailwindcss": "1.7.3"
