--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "classnames": "2.2.6",
     "graphql-request": "2.0.0",
-    "markdown-to-jsx": "6.11.4",
+    "he": "1.2.0",
     "next": "9.5.2",
+    "next-mdx-remote": "1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
