--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindui/react": "0.1.1",
     "classnames": "2.2.6",
     "graphql-request": "2.0.0",
     "he": "1.2.0",
