--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindui/react": "0.1.1",
     "classnames": "2.2.6",
     "graphql-request": "2.0.0",
     "he": "1.2.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "0.2.0",
     "@tailwindcss/ui": "0.5.0",
+    "babel-plugin-inline-react-svg": "1.1.1",
     "postcss-preset-env": "6.7.0",
     "tailwindcss": "1.7.6"
   }
