chore(deps): Add graphql dependency

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindui/react": "0.1.1",
     "classnames": "2.2.6",
+    "graphql": "15.4.0",
     "graphql-request": "3.3.0",
     "he": "1.2.0",
     "next": "10.0.3",
