chore(deps): Add @headlessui/react dependency

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "0.2.0",
     "@tailwindui/react": "0.1.1",
     "classnames": "2.2.6",
     "graphql": "15.4.0",
