feat: Add locale select UI (#48)
* chore(deps): Add @headlessui/react dependency

* chore(deps): Remove @tailwindui/react dependency

* refactor: Use <Transition /> component from @headlessui/react

* feat: Add <Select /> component

Using @headlessui/react

* feat: Add _locales.js to extend locales config

* feat: Add language select to <Footer />

* refactor: Add activeLocale constant

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindui/react": "0.1.1",
+    "@headlessui/react": "0.2.0",
     "classnames": "2.2.6",
     "graphql": "15.4.0",
     "graphql-request": "3.3.0",
