--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "0.2.1",
     "@tailwindcss/typography": "0.3.1",
     "babel-plugin-inline-react-svg": "1.1.2",
     "postcss-preset-env": "6.7.0",
