--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash.startcase": "4.4.0",
     "next": "10.0.3",
     "next-mdx-remote": "1.0.0",
+    "next-seo": "4.17.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
