--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@headlessui/react": "0.3.2",
     "classnames": "2.3.1",
+    "framer-motion": "^4",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
     "he": "1.2.0",
@@ -19,7 +23,8 @@
     "next-mdx-remote": "1.0.1",
     "next-seo": "4.24.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "0.3.2",
