--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "@chakra-ui/react": "^1.6.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@headlessui/react": "0.3.2",
-    "classnames": "2.3.1",
     "framer-motion": "^4",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
@@ -27,10 +25,6 @@
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "0.3.2",
-    "@tailwindcss/typography": "0.4.1",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "2.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "prettier": "2.3.0"
   }
 }
