--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "0.3.2",
-    "classnames": "2.3.1",
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "graphql": "15.5.0",
     "graphql-request": "3.4.0",
     "he": "1.2.0",
@@ -19,13 +21,10 @@
     "next-mdx-remote": "1.0.1",
     "next-seo": "4.24.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "0.3.2",
-    "@tailwindcss/typography": "0.4.1",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "2.3.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "prettier": "2.3.0"
   }
 }
